	* fixed a bug that caused the whole interface to freeze while the outline was being rebuilt
	
* 1.0.5
	* fixed a bug that caused the debugger to get stuck when the executable being debugged was killed
	* completion box now automatically closes after typing a space
	* added a facility to change all the paths at once in the paths preference page
	* added an option to always expand some elements in the outline (modules, classes)
	* added an option (both in the preferences and in the outline toolbar) to always fully expand the outline
	* fixed a bug in the parser with complex patterns in 'let in' expressions
	* added editing support for ml4 files (but no parser and no outline)    
	
* 1.0.6
	* hyperlinks now find renamed modules in current module
	* hyperlinks now work correctly with definitions like: "let a = 2;; let a = a in let a = a in a;;" 
	* modified the paths preference page to make it more intuitive
	* added an option to "unnest" "let in" definitions (activated by default)
	* added "while" and "begin end" templates 
	* improved outline speed
	
* 1.0.7
	* Completion, hyperlinks, and the module browser are now based on the new parser (major refactoring)
	* Drastic speed-up of hyperlinks which open other modules
	* Tweaked the 'unnest in' option, and corrected a bug which caused definitions to appear out of order.
	* Split the outline preference page into two pages, because it was too long.
	* Fixed a bug with definitions that appeared several times in the outline when the code was not syntactically correct.
	* Fixed a bug with syntax coloring of ocamldoc comments
	* If the debugger doesn't want to exit after clicking on "terminate", a second click on the "terminate" button will kill it, together with the debugged process
	* Added an option (for the editor) to automatically add the closing double-quote
	* "Convert revised syntax to standard syntax" and "Format with camlp4" actions now display the potential error message
	
	
	
	
	
	