@@ -100,6 +100,7 @@ public class PreferenceInitializer extends AbstractPreferenceInitializer {
 			store.setDefault(PreferenceConstants.P_OUTLINE_EXPAND_CLASSES, false);
 			
 			store.setDefault(PreferenceConstants.P_OUTLINE_UNNEST_IN, true);
+			store.setDefault(PreferenceConstants.P_OUTLINE_AND_BLUE, true);
 
 			
 			// set the defaults for the debugger
